<resources>
    <string name="app_name">Calculadora</string>

    <string name="num1">Número 1</string>
    <string name="num2">Número 2</string>
    <string name="boton">Operar</string>
    <string name="suma">Sumar</string>
    <string name="resta">Restar</string>
    <string name="multiplicacion">Multiplicar</string>
    <string name="division">Dividir</string>
    <string name="tresultado">Resultado</string>
    <string name="resultado">Resultado</string>
</resources>
