<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/estilo2"

    >
<!--asdda-->
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num1"
            android:textSize="20dp"
            style="@style/estilo2"
            android:textColorHint="@color/white"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:id="@+id/N1"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num2"
            android:textSize="20dp"
            style="@style/estilo2"
            android:textColorHint="@color/white"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:id="@+id/N2"/>
    </LinearLayout>


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        >
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <RadioButton android:id="@+id/suma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suma"
                style="@style/estilo2"
                android:textSize="25dp"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/resta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resta"
                style="@style/estilo2"
                android:textSize="25dp"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/multiplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion"
                android:textSize="25dp"
                style="@style/estilo2"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textSize="25dp"
                style="@style/estilo2"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >


        <LinearLayout

            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:weightSum="1">


            <LinearLayout

                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="124dp"
                android:gravity="center"
                android:layout_weight="1.31">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boton"
                    android:textSize="25dp"
                    android:id="@+id/boton"
                    android:textColor="@color/orange"

                    />
            </LinearLayout>

        </LinearLayout>

    
    </LinearLayout>


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tresultado"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:textColor="@color/yellow"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/tres"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:id="@+id/res"
            />


    </LinearLayout>

</LinearLayout>